add AWS config file

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,6 @@
 # Node artifact files
 node_modules/
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
